--- a/src/pages/fancy-select/fancy-select.html
+++ b/src/pages/fancy-select/fancy-select.html
@@ -15,9 +15,9 @@
     <button ion-item class="fancy-select-item" (click)="selectOption(i)" *ngFor="let option of options; let i=index">
       <div class="one-ion-option" [ngClass]="option.shift.getShiftColor()">
         <div class="shift-svg-number">{{circled_numbers[option.shift.shift_number]}}</div>
-        <div class="shift-text">{{option.shift.start_time.format("MMM DD")}} (Payroll week {{option.shift.shift_week.format("MMM DD")}})</div>
+        <div class="shift-text">{{option.shift.start_time.format("MMM DD")}} ({{'payroll_week' | translate}} {{option.shift.shift_week.format("MMM DD")}})</div>
       </div>
     </button>
   </ion-list>
-  <button ion-button block color="light" (click)="cancel()">Cancel</button>
+  <button ion-button block color="light" (click)="cancel()">{{'cancel' | translate}}</button>
 </ion-content>
