--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,6 +10,19 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button color="secondary" class="logout-button"  (click)="confirmLogout()">{{'logout' | translate}}</button>
+  <ion-list>
+    <ion-item-group>
+      <ion-item-divider color="light">{{'app_info' | translate}} </ion-item-divider>
+      <ion-item>
+        <ion-label>{{'version' | translate}}: {{appName}} (v.{{appVersion}})</ion-label>
+      </ion-item>
+    </ion-item-group>
+    <ion-item-group>
+      <ion-item-divider color="light">{{'app_functions' | translate}} </ion-item-divider>
+      <ion-item>
+        <button ion-item color="secondary" class="logout-button"  (click)="confirmLogout()">{{'logout' | translate}}</button>
+      </ion-item>
+    </ion-item-group>
+  </ion-list>
 </ion-content>
 <onsite-tabs></onsite-tabs>
