--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
+  <ion-list *ngIf="dataReady">
     <ion-item-group>
       <ion-item-divider color="light">{{'app_info' | translate}} </ion-item-divider>
       <ion-item>
@@ -18,9 +18,21 @@
       </ion-item>
     </ion-item-group>
     <ion-item-group>
+      <ion-item-divider color="light">{{'user_settings' | translate}}</ion-item-divider>
+      <ion-item>
+        <ion-label>{{'language' | translate}}</ion-label>
+        <ion-select [(ngModel)]="language" (ionChange)="updateLanguage($event)">
+          <ion-option *ngFor="let language of languages" [value]="language">{{language.display}}</ion-option>
+        </ion-select>
+      </ion-item>
+    </ion-item-group>
+    <ion-item-group>
       <ion-item-divider color="light">{{'app_functions' | translate}} </ion-item-divider>
       <ion-item>
         <button ion-item color="secondary" class="logout-button"  (click)="confirmLogout()">{{'logout' | translate}}</button>
+      </ion-item>
+      <ion-item>
+        <button ion-item color="secondary" class="help-button"  (click)="sendComment()">{{'comment_button' | translate}}</button>
       </ion-item>
     </ion-item-group>
   </ion-list>
