--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,7 +24,14 @@
    <ion-list no-border *ngIf="dataReady">
     <ion-item *ngFor="let shift of shifts; let i=index" [ngClass]="getShiftStatus(i)">
       <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
-      <span class="shift-text">{{hoursTotalList[i]}}&nbsp; {{"of" | translate}} &nbsp;{{techProfile.shiftLength}} &nbsp; {{"hours" | translate}} </span>
+      <span class="shift-text">{{hoursTotalList[i]}}&nbsp;
+                                {{"of" | translate}} &nbsp;
+                                {{techProfile.shiftLength}} &nbsp;
+                                {{"hours" | translate}} &nbsp;&nbsp;
+      </span>
+      <span class="normal-txt">
+                                {{shift.getStartTime().format("ddd, MMM D")}}
+      </span>
       <ion-icon item-end class="chk-box-icon" [ngClass]="getShiftStatus(i)" [innerHTML]="getCheckboxSVG(i) | safe: 'html'"></ion-icon >
     </ion-item>
   </ion-list>
