--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -41,7 +41,7 @@
             <ion-item-options side="right">
               <button ion-button color="danger" (click)="deleteWorkOrder($event, report)">
                 <ion-icon name="trash"></ion-icon>
-                {{"delete_button" | translate}}
+                {{"delete" | translate}}
               </button>
             </ion-item-options>
           </ion-item-sliding>
