Report history fixes and placeholder for new work order

--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -11,8 +11,8 @@
         <ion-item-divider color="light">
           <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}&nbsp;&nbsp;</ion-icon>
           &nbsp;&nbsp;{{shift.getStartTime().format("ddd, MMM D")}}&nbsp;&nbsp;
-          <ion-note> shift hrs var </ion-note> <!-- {{hoursTotalList[i]}} -->
-          <button ion-button icon-only item-end>
+          <ion-note>{{ud.getTotalHoursForShift(shift.getShiftSerial())}}</ion-note>
+          <button ion-button icon-only item-end (click)="addNewReportForShift(shift)">
           <ion-icon name='document' color="primary"></ion-icon>
           </button>
         </ion-item-divider>
@@ -20,8 +20,8 @@
           <ion-item-sliding class="report-history-list-item-sliding" *ngFor="let report of filtReports[filterKeys[i]]">
             <ion-item class="report-history-list-item" (click)="itemTapped($event, report)">
               <div class="report-history-report-item">
-                <span class="report-history-report-item-header">{{'hours' | translate}}&nbsp;&nbsp;</span>
-                <span class="report-history-report-item-data">{{report.work_order_number}}</span>
+                <span class="report-history-report-item-header">{{'hours_header' | translate}}&nbsp;&nbsp;</span>
+                <span class="report-history-report-item-data">{{report.repair_hours}}</span>
               </div>
               <div class="report-history-report-item">
                 <span class="report-history-report-item-header">{{'report_label_wo_number' | translate}}&nbsp;&nbsp;</span>
