--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,7 +22,7 @@
   <h5> {{"home_hours_submitted_for_payroll" | translate}} </h5>
 
    <ion-list no-border *ngIf="dataReady">
-    <ion-item *ngFor="let shift of shifts; let i=index" [ngClass]="getShiftStatus(i)">
+    <ion-item class="ion-item-button-like" [ngClass]="getShiftStatus(i)" *ngFor="let shift of shifts; let i=index" (click)="showShiftReports(shift)">
       <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
       <span class="shift-text">{{hoursTotalList[i]}}&nbsp;
                                 {{"of" | translate}} &nbsp;
@@ -32,7 +32,7 @@
       <span class="normal-txt">
                                 {{shift.getStartTime().format("ddd, MMM D")}}
       </span>
-      <ion-icon item-end class="chk-box-icon" [ngClass]="getShiftStatus(i)" [innerHTML]="getCheckboxSVG(i) | safe: 'html'"></ion-icon >
+      <ion-icon item-end class="chk-box-icon" [ngClass]="getShiftStatus(i)" [innerHTML]="getCheckboxSVG(i) | safe: 'html'" (click)="possibleSound(i)"></ion-icon >
     </ion-item>
   </ion-list>
 
