--- a/src/pages/fancy-select/fancy-select.html
+++ b/src/pages/fancy-select/fancy-select.html
@@ -11,13 +11,15 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list class="fancy-select">
-    <button ion-item class="fancy-select-item" (click)="selectOption(i)" *ngFor="let option of options; let i=index">
+  <div class="full-screen-modal">
+    <ion-list class="fancy-select">
+      <button ion-item class="fancy-select-item" (click)="selectOption(i)" *ngFor="let option of options; let i=index">
       <div class="one-ion-option" [ngClass]="option.shift.getShiftColor()">
         <div class="shift-svg-number">{{circled_numbers[option.shift.shift_number]}}</div>
         <div class="shift-text">{{option.shift.start_time.format("MMM DD")}} ({{'payroll_week' | translate}} {{option.shift.shift_week.format("MMM DD")}})</div>
       </div>
     </button>
-  </ion-list>
+    </ion-list>
   <button ion-button block color="light" (click)="cancel()">{{'cancel' | translate}}</button>
+  </div>
 </ion-content>
