--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,10 +7,10 @@
       {{"home_title" | translate}}
     </ion-title>
      <ion-buttons right>
-      <button ion-button color="light" icon-only (click)="showHelp($event)">
+      <button ion-button color="primary" icon-only (click)="showHelp($event)">
         <ion-icon class="header-help-button" name="help-circle"></ion-icon>
       </button>
-      <button ion-button color="light" icon-only (click)="tabs.terminateApp()">
+      <button ion-button color="dark" icon-only (click)="tabs.terminateApp()">
         <ion-icon class="header-close-button" name="close"></ion-icon>
       </button>
     </ion-buttons>
