--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
-     <button class="startSingleButton" ion-button icon-only menuToggle>
+    <button class="startSingleButton" ion-button icon-only menuToggle>
       <ion-icon class="startSingleIcon" name="ion-home"></ion-icon>
     </button>
     <ion-title>
       {{"home_title" | translate}}
     </ion-title>
-     <ion-buttons right>
+    <ion-buttons right>
       <button ion-button color="primary" icon-only (click)="showHelp($event)">
         <ion-icon class="header-help-button" name="help-circle"></ion-icon>
       </button>
@@ -18,38 +18,72 @@
 </ion-header>
 
 <ion-content padding>
-  <h5 class="home-welcome">{{'user' | translate}}: {{ud.getTechName()}}</h5>
-  <h5> {{"home_hours_submitted_for_payroll" | translate}} </h5>
-
-   <ion-list no-border *ngIf="dataReady">
+  <p class="home-welcome">{{ud.getTechName()}}</p>
+  <p class="home-date">{{todayLongDate.format('dddd MMM DD YYYY')}} </p>
+  <ion-card class="shift-summary">
+  <ion-card-header> {{"home_hours_submitted_for_payroll" | translate}} </ion-card-header>
+  <ion-list no-border *ngIf="dataReady">
     <ion-item class="ion-item-button-like" [ngClass]="getShiftStatus(i)" *ngFor="let shift of shifts; let i=index" (click)="showShiftReports(shift)">
       <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
-      <span class="shift-text">{{hoursTotalList[i]}}&nbsp;
-                                {{"of" | translate}} &nbsp;
-                                {{techProfile.shiftLength}} &nbsp;
-                                {{"hours" | translate}} &nbsp;&nbsp;
+      <span class="shift-text">{{hoursTotalList[i]}}&nbsp;/&nbsp;{{techProfile.shiftLength}} &nbsp;{{"hours" | translate}} &nbsp;&nbsp;
       </span>
       <span class="normal-txt">
                                 {{shift.getStartTime().format("ddd, MMM D")}}
       </span>
-      <ion-icon item-end class="chk-box-icon" [ngClass]="getShiftStatus(i)" [innerHTML]="getCheckboxSVG(i) | safe: 'html'" (click)="possibleSound(i)"></ion-icon >
+      <ion-icon item-end class="chk-box-icon" [ngClass]="getShiftStatus(i)" [innerHTML]="getCheckboxSVG(i) | safe: 'html'" (click)="possibleSound(i)"></ion-icon>
     </ion-item>
+    <ion-list-header>
+      Pay Period :
+      <ion-note item-end>
+      {{shifts[0].shift_week.format("MMM DD")}} - {{moment(shifts[0].shift_week).add(6,'days').format("MMM DD")}}
+      </ion-note>
+    </ion-list-header>
+    <ion-list-header>
+      {{"home_hours_submitted_for_payroll_period" | translate}}:
+      <ion-note item-end>
+      {{ payrollPeriodHours }}
+      </ion-note>
+      </ion-list-header>
+    <ion-list-header>
+      {{"home_payroll_hours_submitted" | translate}} :
+      <ion-note item-end>
+      {{ payrollPeriodBonusHours }}
+      </ion-note>
+      </ion-list-header>
   </ion-list>
+  </ion-card>
+  <ion-card class="shift-summary">
+  <ion-card-header> {{"home_hours_submitted_for_payroll" | translate}} </ion-card-header>
+  <ion-list no-border *ngIf="dataReady">
+    <ion-item class="ion-item-button-like" [ngClass]="getShiftStatus(i)" *ngFor="let shift of shifts; let i=index" (click)="showShiftReports(shift)">
+      <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
+      <span class="shift-text">{{hoursTotalList[i]}}&nbsp;/&nbsp;{{techProfile.shiftLength}} &nbsp;{{"hours" | translate}} &nbsp;&nbsp;
+      </span>
+      <span class="normal-txt">
+                                {{shift.getStartTime().format("ddd, MMM D")}}
+      </span>
+      <ion-icon item-end class="chk-box-icon" [ngClass]="getShiftStatus(i)" [innerHTML]="getCheckboxSVG(i) | safe: 'html'" (click)="possibleSound(i)"></ion-icon>
+    </ion-item>
+    <ion-list-header>
+      Pay Period :
+      <ion-note item-end>
+      {{shifts[0].shift_week.format("MMM DD")}} - {{moment(shifts[0].shift_week).add(6,'days').format("MMM DD")}}
+      </ion-note>
+    </ion-list-header>
+    <ion-list-header>
+      {{"home_hours_submitted_for_payroll_period" | translate}}:
+      <ion-note item-end>
+      {{ payrollPeriodHours }}
+      </ion-note>
+      </ion-list-header>
+    <ion-list-header>
+      {{"home_payroll_hours_submitted" | translate}} :
+      <ion-note item-end>
+      {{ payrollPeriodBonusHours }}
+      </ion-note>
+      </ion-list-header>
+  </ion-list>
+  </ion-card>
 
-  <h6> {{"home_hours_submitted_for_payroll_period" | translate}}: {{ payrollPeriodHours }} </h6>
-  <h6> {{"home_payroll_hours_submitted" | translate}} : {{ payrollPeriodBonusHours }} </h6>
 </ion-content>
 <onsite-tabs></onsite-tabs>
-
-  <!-- <div *ngIf="dataReady">
-    <p *ngFor="let shift of shifts; let i=index" [ngClass]="getShiftStatus(i)">
-      <span class="shft-num-icon">{{numChars[shift.shift_number]}}</span>
-      <span class="shift-text">{{hoursTotalList[i]}} {{"of" | translate}} {{techProfile.shiftLength}} {{"home_hours_submitted_for_shift" | translate}}</span>
-      <span class="chk-box-icon" [ngClass]="getShiftStatus(i)" [innerHTML]="getCheckboxSVG(i) | safe: 'html'"></span>
-    </p>
-  </div> -->
-
-      <!-- <span class="shft-num-icon">{{numChars[shift.shift_number]}}</span> -->
-      <!-- <span class="chk-box-icon" [class.hrsCompleted]="getShiftStatus(i)">{{getCheckbox(i)}}</span> -->
-      <!-- <span class="chk-box-icon" [class.hrsCompleted]="getShiftStatus(i)"><img class="checkbox-svg-icon" [src]="getCheckboxSVG(i)" /></span> -->
-<!-- {{"home_hours_submitted_for_shift" | translate}} -->
