--- a/src/pages/fancy-select/fancy-select.html
+++ b/src/pages/fancy-select/fancy-select.html
@@ -16,7 +16,7 @@
       <button ion-item class="fancy-select-item" (click)="selectOption(i)" *ngFor="let option of options; let i=index">
       <div class="one-ion-option" [ngClass]="option.shift.getShiftColor()">
         <div class="shift-svg-number">{{circled_numbers[option.shift.shift_number]}}</div>
-        <div class="shift-text">{{option.shift.start_time.format("MMM DD")}} ({{'payroll_week' | translate}} {{option.shift.shift_week.format("MMM DD")}})</div>
+        <div class="shift-text">{{option.shift.start_time.format("ddd DD")}} ({{'payroll_week' | translate}} {{option.shift.shift_week.format("MMM DD")}})</div>
       </div>
     </button>
     </ion-list>
