--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,18 +32,13 @@
       </ion-item>
     </ion-card-header>
     <ion-list no-border>
-      <ion-item class="ion-item-button-like" [ngClass]="shift.getShiftStatus()" *ngFor="let shift of period.shifts; let i=index" (click)="showShiftReports(shift)">
+      <ion-item class="ion-item-button-like"  *ngFor="let shift of period.shifts; let i=index" (click)="showShiftReports(shift)">
         <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
         <span class="shift-text">{{shift.getNormalHours()}}&nbsp;/&nbsp;{{shift.getShiftLength()}} &nbsp;{{"hours" | translate}} &nbsp;&nbsp;</span>
         <span class="normal-txt">{{shift.getStartTime().format("ddd, MMM D")}}</span>
         <ion-icon item-end class="chk-box-icon" [ngClass]="shift.getShiftStatus()" [innerHTML]="getCheckboxSVG(shift) | safe: 'html'" (click)="possibleSound(shift)"></ion-icon>
       </ion-item>
-      <ion-list-header>
-        {{'pay_period' | translate}} :
-        <ion-note item-end>
-          {{period.getPayrollPeriodDescription()}}
-        </ion-note>
-      </ion-list-header>
+      <ion-list-header class="blank-list-header" ></ion-list-header>
       <ion-list-header>
         {{"home_hours_submitted_for_payroll_period" | translate}}:
         <ion-note item-end>
