--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Messages</ion-title>
+    <ion-title> {{'messages_title' | translate}} </ion-title>
   </ion-navbar>
 
 </ion-header>
