--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -33,14 +33,15 @@
       <ion-list padding>
         <ion-item (click)="showFancySelect()" class="item item-button ion-item-button-like">
           <ion-label>{{'shift_date' | translate}}</ion-label>
-          <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShiftText"></ion-input>
-          <ion-icon item-right class="shift-date-select-icon" name="arrow-dropdown"></ion-icon>
+          <!-- <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShiftText"></ion-input> -->
+          <ion-input #shiftDateResults [disabled]="shiftDateInputDisabled" class="shift-date-select-results" [value]="selectedShift.toString(translate)"></ion-input>
+          <ion-icon item-right class="shift-date-select-icon" name="md-arrow-dropdown"></ion-icon>
         </ion-item>
         <ion-item>
           <ion-label>{{'repair_time' | translate}}</ion-label>
              <ion-multi-picker class="repair-hours-picker" item-content [separator]="':'" [multiPickerColumns]="chooseHours" formControlName='repair_time'></ion-multi-picker>
            <!-- <ion-input formControlName='repair_time'></ion-input> -->
-          <ion-icon item-right class="shift-repair-time-icon" name="arrow-dropdown"></ion-icon>
+          <ion-icon item-right class="shift-repair-time-icon" name="md-arrow-dropdown"></ion-icon>
         </ion-item>
         <ion-item>
           <ion-label floating>{{'unit_number' | translate}}</ion-label>
