--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -11,9 +11,9 @@
         <ion-item-divider color="light">
           <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}&nbsp;&nbsp;</ion-icon>
           &nbsp;&nbsp;{{shift.getStartTime().format("ddd, MMM D")}}&nbsp;&nbsp;
-          <ion-note>{{shift.getNormalHours()}}</ion-note>
+          <ion-note>{{shift.getNormalHours()}} Hrs</ion-note>
           <button ion-button icon-only item-end (click)="addNewReportForShift(shift)">
-          <ion-icon name='document' color="primary"></ion-icon>
+          <ion-icon name='ios-document-outline' color="primary"></ion-icon>
           </button>
         </ion-item-divider>
         <div class="report-history-reports-subcontainer" *ngIf="filtReports[filterKeys[i]].length">
