--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -4,6 +4,9 @@
   </ion-navbar>
 </ion-header>
 
+<!-- <div #fixed ion-fixed></div>
+<ion-content padding [ngStyle]="{'margin-top': fixedHeight}"> -->
+<!-- <div #fixed ion-fixed></div> -->
 <ion-content padding>
   <div class="report-history-container" *ngIf="pageReady">
     <ion-list class="reportList">
