Update to language and developer page

--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -58,5 +58,6 @@
     </ion-item>
   </ion-item-group>
   <button ion-button block color="primary" (click)="updatePreferences()">Save</button>
+  <button ion-button block color="light" type="button" (click)="cancel()">Cancel</button>
 </ion-content>
 <onsite-tabs></onsite-tabs>
