Message counter fix, close button remove, remove close button reference in logout string

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,9 +10,9 @@
       <button ion-button color="primary" icon-only (click)="showHelp($event)">
         <ion-icon class="header-help-button" name="help-circle"></ion-icon>
       </button>
-      <button ion-button color="dark" icon-only (click)="tabs.terminateApp()">
+      <!-- <button ion-button color="dark" icon-only (click)="tabs.terminateApp()">
         <ion-icon class="header-close-button" name="close"></ion-icon>
-      </button>
+      </button> -->
     </ion-buttons>
   </ion-navbar>
 </ion-header>
